<resources>
    <string name="app_name">AboutMe</string>
    <string name="request_user_id" translatable="false">enter your mail id....</string>
    <string name="request_user_password" translatable="false">enter password..</string>
    <string name="request_user_repassword" translatable="false">enter password again..</string>
    <string name="request_user_name" translatable="false">enter your name....</string>
    <string name="request_user_mobile_number" translatable="false">enter mobile number....</string>
    <string name="request_user_lastName" translatable="false">enter last name....</string>
    <string name="submit_button" translatable="false">Submit</string>
    <string name="send_button" translatable="false">Send</string>
    <string name="font_bold_futura" translatable="false">fonts/Futura-Bold.otf</string>
    <string name="coninue_with_google">Continue with GOOGLE</string>
    <string name="already_have_an_account" translatable="false">Have an account ?</string>
    <string name="sign_in_with_facebook">Continue With FACEBOOK</string>
    <string name="sign_up_with_mail">Sign Up With MAIL</string>
    <string name="title_activity_home_screen" translatable="false">HomeScreen</string>
    <string name="forgot_password" translatable="false">FORGOT PASSWORD</string>
    <string name="mPin_error" translatable="false">please enter right pin....</string>
    <string name="set_mPin" translatable="false">please set your mPin....</string>
    <string name="oops_blank" translatable="false">Opps!....</string>
    <string name="add_content" translatable="false">please get first registered </string>
    <string name="loading_generic_message" translatable="false">Loading…</string>
    <string name="hi_aboutme" translatable="false">Hi AboutMe, \nHere\'s what I think:\n\n\n\n\nPlease don\'t alter
        the lines below\n==============================\nProduct: AboutMe\n\nVersion @version
        Build @build\n\nPlatform Type: Android\n\nDevice Type: @device_type\n\nOS version:
        @os_version\n\nEmail address: @email</string>
    <string name="aboutme_app_support" translatable="false">AboutMe App Support</string>
    <string name="clientId" translatable="false">1049134607378-bqigv85qg4ub2ts6bjdr27uvnkmr7c3b.apps.googleusercontent.com</string>

    <!--These string are for preferences-->
    <string name="user_name" translatable="false">username</string>
    <string name="user_id" translatable="false">id</string>
    <string name="photo_url" translatable="false">url</string>
    <string name="email" translatable="false">email</string>
    <string name="preference_file_key" translatable="false">com.aboutme.avenjr.aboutme</string>
    <string name="loginFrom" translatable="false">noLogin</string>
    <string name="mpin" translatable="false">mpin</string>
    <string name="password" translatable="false">password_empty</string>
    <string name="mobile_number" translatable="false">number_empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_reset_password" translatable="false">ResetPassword</string>
    <string name="no_network" translatable="false">No Network</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="reset_mpin" translatable="false">Reset Mpin</string>
    <string name="blog_header_string" translatable="false">Blog</string>
    <string name="documents_header_string" translatable="false">Documents</string>
    <string name="events_header_string" translatable="false">Events</string>
    <string name="feedback_header_string" translatable="false">Feedback</string>
    <string name="home_header_string" translatable="false">Home</string>
    <string name="profile_header_string" translatable="false">Profile</string>
    <string name="work_header_string" translatable="false">Work</string>
    <string name="profile_section" translatable="false">Add Profile Section</string>
    <string name="education" translatable="false">Educational</string>
    <string name="hobby" translatable="false">Hobbies</string>
    <string name="other_activities" translatable="false">Other Activities</string>
    <string name="mobile_verification" translatable="false">MobileVerification</string>
    <string name="resend_code" translatable="false">Resend code</string>
    <string name="verify_code" translatable="false">verify_code</string>
    <string name="request_verification_code" translatable="false">please enter verification code</string>
    <string name="enter_correct_otp" translatable="false">please enter correct verification code…</string>
    <string name="mobile_number_registration_successful" translatable="false">your mobile number is successfuly registered…</string>
    <string name="mobile_verification_failed" translatable="false">mobile verification failed</string>
    <string name="success_message" translatable="false">Success</string>
    <string name="confirm_message" translatable="false">Confirm!</string>
    <string name="select_country" translatable="false">please select country…</string>
    <string name="entertainment_section" translatable="false">Entertainment</string>
    <string name="select_category" translatable="false">Add Category</string>
    <string name="section_description" translatable="false">Add contribution related to your</string>
    <string name="section_image" translatable="false">section image</string>
    <string name="terms_of_service" translatable="false">Terms of Service</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="sign_up" translatable="false">SignUp</string>
    <string name="about_me_user_id" translatable="false">user@aboutme.com</string>
    <string name="user_token" translatable="false">null</string>
    <string name="app_rate" translatable="false">0.0f</string>
    <string name="category_selection" translatable="false">select and deselect the category</string>
    <string name="back_click" translatable="false">back_header_click</string>
    <string name="remove_selection" translatable="false">remove_selection</string>
    <string name="select_profile" translatable="false">Select Profile</string>
    <string name="right_navigation_selection" translatable="false">right_navigation_selection</string>
    <string name="close" translatable="false">close</string>
    <string name="welcome_logo" translatable="false">welcome logo</string>
    <string name="let_s_manage_yourself" translatable="false">Let\'s manage yourself...</string>
    <string name="navigation_header" translatable="false">Navigation Header</string>
    <string name="place_call" translatable="false">place_call</string>
    <string name="find_location" translatable="false">find_location</string>
    <string name="update_user">Update User</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update">Update</string>
    <string name="enter_your_age">enter your age...</string>
    <string-array name="select_country">
        <item>india</item>
        <item>America</item>
    </string-array>
</resources>
