<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aboutme.avenjr.aboutme.main.activity.SignIn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="100dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_user_id"
            android:id="@+id/request_user_id"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_user_password"
            android:id="@+id/request_user_password"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/submit_button"
            android:text="@string/submit_button"
            android:layout_gravity="center"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
