<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.profile.FriendsDetailsFragment">


    <TextView
        android:id="@+id/friend_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/hello_blank_fragment" />

    <ImageView
        android:id="@+id/place_call"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shadow_circle"
        android:contentDescription="@string/place_call"
        android:padding="25dp"
        android:src="@drawable/ic_call_black_24dp" />

    <ImageView
        android:id="@+id/find_location"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/shadow_circle"
        android:contentDescription="@string/find_location"
        android:padding="25dp"
        android:src="@drawable/ic_location_on_black_24dp" />

</RelativeLayout>