<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.sqlOperations.UpdateUser">


    <RelativeLayout
        android:id="@+id/layout_parent"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:padding="30dp"
        tools:ignore="UselessParent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/FloatingHintStyle">

            <com.aboutme.avenjr.aboutme.view.FontEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:hint="@string/request_user_name"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_first_name"
            app:hintTextAppearance="@style/FloatingHintStyle">

            <com.aboutme.avenjr.aboutme.view.FontEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:hint="@string/request_user_lastName"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_last_name"
            app:hintTextAppearance="@style/FloatingHintStyle">

            <com.aboutme.avenjr.aboutme.view.FontEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:hint="@string/enter_your_age"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/input_age"
            android:layout_centerHorizontal="true"
            android:text="@string/update" />

    </RelativeLayout>

</RelativeLayout>