<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup_view"
    tools:context="com.aboutme.avenjr.aboutme.activity.SignInActivity"
    >
    <!--downloaded from unsplash.com-->
    <!--<com.aboutme.avenjr.aboutme.main.view.BackHeader-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:id="@+id/back_header">-->
    <!--</com.aboutme.avenjr.aboutme.main.view.BackHeader>-->
    <com.aboutme.avenjr.aboutme.view.NavigationHeader
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/back_header">
    </com.aboutme.avenjr.aboutme.view.NavigationHeader>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_up"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/green"
            android:text="@string/submit_button"
            android:textColor="@color/white"
            android:layout_below="@+id/have_an_account_button"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/your_account"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="25dp"
        android:text="Your Account"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/dark_black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/input_credentials"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/your_account">
        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/input_email">
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/request_user_id"
                android:textColor="@color/dark_black"
                android:id="@+id/request_user_id"
                android:textSize="15dp"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/input_password">
            <EditText
                android:textSize="15dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/request_user_password"
                android:id="@+id/request_user_password"
                android:singleLine="true"
                style="@style/Widget.AppCompat.EditText"
                android:textColor="@color/dark_black"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/input_repassword">
            <EditText
                android:textSize="15dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/request_user_repassword"
                android:id="@+id/request_user_repassword"
                style="@style/Widget.AppCompat.EditText"
                android:textColor="@color/dark_black"/>
        </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="25dp"
        android:text="Your Personal Info"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:singleLine="true"
        android:textColor="@color/dark_black"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="300dp"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:hint="@string/request_user_name"
            android:id="@+id/request_user_name"
            android:singleLine="true"
            style="@style/Widget.AppCompat.EditText"
            android:textColor="@color/dark_black"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/request_user_repassword"
            android:id="@+id/request_user_lastName"
            android:singleLine="true"
            android:textSize="15dp"
            style="@style/Widget.AppCompat.EditText"
            android:textColor="@color/dark_black"/>
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/request_user_mobile_number"
                android:id="@+id/request_user_mobile_number"
                android:singleLine="true"
                android:textSize="15dp"
                style="@style/Widget.AppCompat.EditText"
                android:textColor="@color/dark_black"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</RelativeLayout>
