<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mobile_verification_parent"
    tools:context=".activity.MobileAuthenticationActivity">

    <com.aboutme.avenjr.aboutme.view.NavigationHeader
        android:id="@+id/navigation_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"></com.aboutme.avenjr.aboutme.view.NavigationHeader>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navigation_header"
        android:background="@drawable/sign_in_new">

        <LinearLayout
            android:id="@+id/input_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="70dp"
            android:background="@color/grey"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:clickable="false"
                android:focusable="false"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/request_user_mobile_number"
                android:textColor="@color/dark_black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <com.aboutme.avenjr.aboutme.view.FontEditText
                android:id="@+id/request_user_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/input_text_view_layout"
                android:imeOptions="actionDone"
                android:lines="1"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/resend_code"
                android:textColor="@color/dark_black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/otp_verification_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_mobile_number"
            android:layout_margin="10dp"
            android:background="@color/grey"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/input_code_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:clickable="false"
                android:focusable="false"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/request_verification_code"
                android:textColor="@color/dark_black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <com.aboutme.avenjr.aboutme.view.FontEditText
                android:id="@+id/verify_code"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:layout_below="@+id/input_code_title"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/input_text_view_layout"
                android:imeOptions="actionDone"
                android:lines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/verify_code_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_code_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/verify_code"
                android:layout_toRightOf="@+id/verify_code"
                android:padding="5dp"
                android:text="@string/verify_code"
                android:textColor="@color/dark_black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:background="@color/green"
            android:text="@string/send_button"
            android:textColor="@color/white"
            android:textSize="20sp">
        </Button>
    </RelativeLayout>
</RelativeLayout>